--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,11 @@
 <head>
     <title>TopRestaurants.it</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
@@ -54,7 +57,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-md-8 col-sm-12 rounded text-center border">
-                <h2 class="mt-5"><a href="search?=#" id="La Cascina">La Cascina</a> <span class="text-warning">&#10029;&#10029;&#10029;&#10029;&#10029;</span></h2>
+                <h2 class="mt-5"><a href="#" id="La Cascina">La Cascina</a> <span class="text-warning">&#10029;&#10029;&#10029;&#10029;&#10029;</span></h2>
                 <h5>18 Ott, 2022</h5>
                 <figure class="figure">
                     <img src="images/rest1.jpg" class="figure-img img-fluid rounded" alt="La Cascina">
@@ -100,9 +103,22 @@
         </div>
     </div>
 
-<div class="mt-5 p-4 bg-dark text-white text-center">
-    <p class="h4"><a href="pages/chiSiamo.html">Chi Siamo</a></p>
-</div>
+    <div class="footer mt-5 p-4 bg-dark text-white">
+        <div class="row">
+            <div class="col-lg-6 col-sm-8 text-center">
+                <h3>Chi siamo</h3>
+                <p>Seguici sui nostri social:</p>
+                <ul class="list-unstyled text-center">
+                    <li><a href="https://twitter.com/TopRestaurants">Twitter</a></li>
+                </ul>
+            <div class="col-lg-6 col-sm-8 text-center">
+                <h3>Contattaci</h3>
+                <p class="text-muted">Email us at <a href="mailto:matteofusaro1@gmail.com">matteofusaro1@gmail.com</a></p>
 
+            </div>
+        </div>
+    </div>
+
+    </div>
 </body>
 </html>
