--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- OTHERS -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/fontawesomeCss/css/all.css">
+    <link rel="stylesheet" href="css/fontawesomeCss/css/brands.css">
+    <link rel="stylesheet" href="css/fontawesomeCss/css/fontawesome.css">
+    <link rel="stylesheet" href="css/fontawesomeCss/css/regular.css">
+    <link rel="stylesheet" href="css/fontawesomeCss/css/solid.css">
+    <link rel="stylesheet" href="css/fontawesomeCss/css/svg-with-js.css">
+    <link rel="stylesheet" href="css/fontawesomeCss/css/v4-shims.css">
 </head>
 <body>
     <header>
@@ -105,20 +114,20 @@
 
     <div class="footer mt-5 p-4 bg-dark text-white">
         <div class="row">
-            <div class="col-lg-6 col-sm-8 text-center">
+            <div class="col-lg-6 col-sm-8 connect-us text-center">
                 <h3>Chi siamo</h3>
-                <p>Seguici sui nostri social:</p>
-                <ul class="list-unstyled text-center">
-                    <li><a href="https://twitter.com/TopRestaurants">Twitter</a></li>
+                <p class="card-subtitle">Seguici sui nostri social:</p>
+                <ul class="list-unstyled" id="social">
+                    <li><a href="https://twitter.com/TopRestaurants"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://facebook.com/TopRestaurants"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://instagram.com/TopRestaurants"><i class="fa fa-instagram"></i></a></li>
                 </ul>
+            </div>
             <div class="col-lg-6 col-sm-8 text-center">
                 <h3>Contattaci</h3>
                 <p class="text-muted">Email us at <a href="mailto:matteofusaro1@gmail.com">matteofusaro1@gmail.com</a></p>
-
             </div>
         </div>
-    </div>
-
     </div>
 </body>
 </html>
