--- a/src/main/resources/static/pages/login.html
+++ b/src/main/resources/static/pages/login.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <title>TopRestaurants.it</title>
+    <title>Login</title>
     <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../css/styles.css" type="text/css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+
 </head>
 <body class="bg-primary align-content-center">
     <header>
@@ -22,7 +20,7 @@
                 <div class="collapse navbar-collapse text-white" id="navbarNav">
                     <ul class="navbar-nav gap-3">
                         <li class="nav-item">
-                            <h4><a class="nav-link text-white" aria-current="page" href="index.html">TopRestaurants.it</a></h4>
+                            <h4><a class="nav-link text-white" aria-current="page" href="/">TopRestaurants.it</a></h4>
                         </li>
                         <li class="nav-item">
                             <h4><a class="nav-link active text-white" href="register.html">Register</a></h4>
@@ -36,6 +34,31 @@
         </nav>
     </header>
 
+    <div class="text-center container-fluid">
+        <div class="text-center text-white">
+            <h1 class="card-header display-1">Login</h1>
+            <h2 class="card-subtitle display-5">Complete the form to login</h2>
+        </div>
+
+        <div class="text-white row mt-4 pt-5">
+            <div class="col-lg-4">
+                <!-- da inserire una image -->
+                <img class="img-responsive" src="https://dummyimage.com/600x">
+            </div>
+            <form class="col-lg-4 px-lg-5 py-lg-5" id="login" action="/login" method="POST">
+                <label class="h3" for="username">Username</label>
+                <input type="text" class="form-control form-control-lg text-center" id="username" name="username" placeholder="username">
+                <label class="h3 pt-4" for="password">Password</label>
+                <input type="password" class="form-control form-control-lg text-center" id="password" name="password" placeholder="password">
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <input type="submit" class="btn btn-dark btn-lg my-4" name="login" value="Login"/>
+                </div>
+            </form>
+            <div class="col-lg-4">
+                <img class="img-responsive" src="https://dummyimage.com/600x">
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
